tests/ui/resolve/unboxed-closure-sugar-nonexistent-trait.stderr
error[E0405]: cannot find trait `Nonexist` in this scope
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:1:8
   |
LL | fn f<F:Nonexist(isize) -> isize>(x: F) {}
   |        ^^^^^^^^ not found in this scope

error[E0404]: expected trait, found type alias `Typedef`
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:6:8
   |
LL | fn g<F:Typedef(isize) -> isize>(x: F) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^ type aliases cannot be used as traits
   |
help: you might have meant to use `#![feature(trait_alias)]` instead of a `type` alias
   |
LL - type Typedef = isize;
LL + trait Typedef = isize;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0404, E0405.
For more information about an error, try `rustc --explain E0404`.
